# blife

./: Cargo.toml  README.md
src/: cli.rs  keyboard.rs  main.rs  pattern_file.rs  pause.rs
