[package]
name = "bevy-life-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["2D"]
2D = []
3D = []
auto-coloring = ["bevy/bevy_sprite"]

[dependencies]
anyhow = "1.0"

[dependencies.bevy_life]
version  = "0.5.0"
features = ["auto-coloring", "2D"]

[dependencies.rand]
version = "0.8"

[dependencies.bevy]
version = "0.8"
default-features = false
features = ["render", "bevy_winit", "x11", "bevy_asset"]
